WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
128268
[Cocoa] WKRemoteObjectInterface fails with doubles, NSNull, and empty NSStrings
https://bugs.webkit.org/show_bug.cgi?id=128268
Summary
[Cocoa] WKRemoteObjectInterface fails with doubles, NSNull, and empty NSStrings
mitz
Reported
2014-02-05 13:10:57 PST
[Cocoa] WKRemoteObjectInterface fails with doubles, NSNull, and empty NSStrings
Attachments
Fix coding bugs
(2.91 KB, patch)
2014-02-05 13:12 PST
,
mitz
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2014-02-05 13:12:36 PST
Created
attachment 223259
[details]
Fix coding bugs
mitz
Comment 2
2014-02-05 13:17:11 PST
Fixed in <
http://trac.webkit.org/r163470
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug