[Cocoa] WKRemoteObjectInterface fails with doubles, NSNull, and empty NSStrings https://bugs.webkit.org/show_bug.cgi?id=128268

Reviewed by Anders Carlsson.

* Shared/API/Cocoa/WKRemoteObjectCoder.mm:
(-[WKRemoteObjectDecoder decodeBytesForKey:returnedLength:]): When returning nullptr, also
set the length out parameter to 0.

* Shared/API/Cocoa/WKRemoteObjectInterface.mm:
(propertyListClasses): Added NSNull.

* Shared/UserData.cpp:
(WebKit::UserData::encode): Encode the Double type.



Canonical link: https://commits.webkit.org/146268@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163470 268f45cc-cd09-0410-ab3c-d52691b4dbfc